deploy/kubernetes/deploy-configs/dev-macondo-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: macondo-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webolith
        component: macondo
    spec:
      containers:
      - name: macondo-container
        image: domino14/macondo:1234
        volumeMounts:
        - mountPath: /dawgs
          name: dawg-data

      volumes:
      - name: dawg-data
        hostPath:
          # Change this path to relevant dawg path.
          path: /dogs

      restartPolicy: Always
