deploy/kubernetes/deploy-configs/dev-webolith-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: webolith-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webolith
        component: django
    spec:
      containers:
      - name: webolith-container
        image: domino14/webolith:

        readinessProbe:
          exec:
            command:
            - cat
            - /opt/webolith/djAerolith/test_requirements.txt
          successThreshold: 1
          failureThreshold: 2
          periodSeconds: 5
          initialDelaySeconds: 5

        lifecycle:
          preStop:
            exec:
              # A hack to try to get 0% downtime during deploys. This should
              # help ensure k8s eventually stops giving this node traffic.
              command: ["sh", "-c", "rm /opt/webolith/djAerolith/test_requirements.txt && sleep 20"]

        volumeMounts:
        # This should be the same as the WORD_DB_LOCATION env var.
        - mountPath: /db
          name: word-db-data

      volumes:
      - name: word-db-data
        hostPath:
          # Change this path to the relevant db path.
          path: 
          # Manually put this in servers in the node(s) until we figure
          # out a better way

      restartPolicy: Always
