deploy/kubernetes/deploy-configs/dev-webolith-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webolith-ingress
spec:
  backend:
    # The default backend.
    serviceName: webolith
    servicePort: 8000
  tls:
  - hosts:
    - 
    secretName: tls-secret
  rules:
  - host: 
    http:
      paths:
      - path: /static
        backend:
          serviceName: nginx-static-svc
          servicePort: 80
      - path: /hackpath-a3997f25ec874ca7bf4ce1821cafd87b
        backend:
          serviceName: nginx-static-svc
          servicePort: 80
